--- a/Jupyter_Practicals.ipynb
+++ b/Jupyter_Practicals.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "tQ1r1bbb0yBv"
+    "id": "tQ1r1bbb0yBv",
+    "tags": []
    },
    "source": [
     "# Automatic differentiation in action\n",
@@ -93,7 +94,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Mqi6xQEhDznx"
+    "id": "Mqi6xQEhDznx",
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "# Autodiff in action: simple examples"
@@ -246,10 +249,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "WBSTMmzCD5PG"
    },
+   "outputs": [],
    "source": [
     "# Automatic differentiation in action: fitting the parameters of an explicit dynamic model"
    ]
@@ -1166,10 +1171,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "RfogHKDIVhKG"
    },
+   "outputs": [],
    "source": [
     "## Define and train a VAE\n",
     "\n",
@@ -2106,7 +2113,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.3",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -2114,9 +2121,9 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
